# Kotodama

./: .gitignore  README.md
.github/workflows/: release-tauri.yml
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: browser.rs  clipboard.rs  debug.rs  lib.rs  main.rs  settings.rs  toast.rs
desktop/ui/: index.html  toast.html
desktop/ui/i18n/: ar.json  bg.json  bho.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  gu.json  he.json  hi.json  hr.json  hu.json  id.json  it.json  ja.json  kn.json  ko.json  lt.json  lv.json  ml.json  mr.json  nl.json  no.json  or.json  pa.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  (+11 more)
